package pt.ufp.info.esof.sgp.models;

public class Tarefa {
    private int tempoEstimado; //minutos
    private double custoEstimado; //eurinhos
    private String titulo;
    private String descricao;
    private Empregado empregado;
    private TarefaAtual tarefaAtual;
}
