package pt.ufp.info.esof.sgp.models;

public class Utilizador {
        private String nome;
}
