package pt.ufp.info.esof.sgp.models.enums;

public enum Estado {

    ADIANTADO,
    ATRASADO,
    NORMAL
}
